// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selenium/webpage should run async script in runAsyncScript 1`] = `
"
    var args = [].slice.call(arguments)
    var callback = args.pop()
    var retVal = (function() { return Promise.resolve(true); }).apply(null, args)
    if (retVal && retVal.then) {
      retVal.then(callback)
    } else {
      callback(retVal)
    }
"
`;

exports[`selenium/webpage should run sync script in runAsyncScript and fix blockless bodies 1`] = `
"
    var args = [].slice.call(arguments)
    var callback = args.pop()
    var retVal = (function() { return true; }).apply(null, args)
    if (retVal && retVal.then) {
      retVal.then(callback)
    } else {
      callback(retVal)
    }
"
`;
